--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.3",
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
     "expo": "~54.0.23",
     "expo-constants": "~18.0.10",
     "expo-linking": "~8.0.8",
