--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "expo": "~54.0.23",
     "expo-constants": "~18.0.10",
     "expo-linking": "~8.0.8",
