--- a/package.json
+++ b/package.json
@@ -12,17 +12,19 @@
     "@expo/vector-icons": "^15.0.3",
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
     "@react-native-community/datetimepicker": "8.4.4",
-    "expo": "~54.0.29",
+    "expo": "~54.0.33",
     "expo-constants": "~18.0.10",
-    "expo-linking": "~8.0.10",
-    "expo-router": "~6.0.19",
+    "expo-font": "~14.0.11",
+    "expo-linking": "~8.0.11",
+    "expo-router": "~6.0.23",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "^0.21.0"
+    "react-native-web": "^0.21.0",
+    "vector-icons": "^0.1.0"
   },
   "private": true,
   "devDependencies": {
