--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@expo/vector-icons": "^15.0.3",
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
     "@react-native-community/datetimepicker": "8.4.4",
-    "expo": "~54.0.33",
+    "expo": "^54.0.0",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.11",
     "expo-linking": "~8.0.11",
